# rules_rust

examples/musl_cross_compiling/: BUILD.bazel  Cargo.toml
extensions/prost/: MODULE.bazel
extensions/prost/private/: prost.bzl
extensions/prost/private/tests/serde/: BUILD.bazel  foo.proto  serde_prost_test.rs
